--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,27 +2,27 @@ name: Release
 "on":
   push:
     tags:
-    - v*.*.*
+      - v*.*.*
 permissions:
   contents: write
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-    - uses: actions/setup-go@v5
-      with:
-        go-version: '>=1.21.1'
-    - name: Set GOVERSION environment variable
-      run: echo "GOVERSION=$(go version)" >>$GITHUB_ENV
-    - name: Release via goreleaser
-      uses: goreleaser/goreleaser-action@v6
-      with:
-        distribution: goreleaser
-        version: latest
-        args: release --clean
-      env:
-        GITHUB_TOKEN: ${{ secrets.GH_PAT3 }}
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ">=1.21.1"
+      - name: Set GOVERSION environment variable
+        run: echo "GOVERSION=$(go version)" >>$GITHUB_ENV
+      - name: Release via goreleaser
+        uses: goreleaser/goreleaser-action@v6
+        with:
+          distribution: goreleaser
+          version: latest
+          args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT3 }}
